--- a/index.html
+++ b/index.html
@@ -40,14 +40,25 @@ Chapters (click on timecodes) :
         </audio>
     </cpu-audio>
 <div>
-000
+↓ Bad media call.
+
+    <cpu-audio data-title="Samba Résille live (2003)" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
+        <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
+        <audio controls id="oups">
+            <source src="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg"  type="audio/mpeg" />
+        </audio>
+    </cpu-audio>
+
 </div>
 <div>
 ↓ Controller only on the playing / last played &lt;audio&gt;
-</div>
 
 <cpu-controller>
 </cpu-controller>
+
+</div>
+
+
 
 <!-- Interact with the upgraded element -->
 <script>
