--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <cpu-audio data-title="Ex0085 Le Mystère Enigma" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg" data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma">
         <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
         <audio controls id="emission">
+            <source src="https://dascritch.net/vrac/Emissions/CPU/0085-CPU%2817-05-18%29.ogg"  type="audio/ogg" />
             <source src="https://dascritch.net/vrac/Emissions/CPU/podcast/0085-CPU%2817-05-18%29.mp3"  type="audio/mpeg" />
         </audio>
     </cpu-audio>
@@ -33,12 +34,17 @@ Chapters (click on timecodes) :
 </ol>
 
 </div>
+
+<div>
+    Aspect changes at 640px and 320px wide; We are waiting @element implementation to complete this.
     <cpu-audio data-title="Samba Résille live (2003)" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
         <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
         <audio controls id="live">
             <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3"  type="audio/mpeg" />
         </audio>
     </cpu-audio>
+</div>
+
 <div>
 ↓ Bad media call.
 
