--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -381,6 +381,12 @@ a:hover svg {
 		max-height : 16px;
   	}
 
+  	.time,
+	.loadingline,
+	.elapsedline {
+		height : 8px ;
+	}
+
   	.share a {
 		height : 32px;
 	}
@@ -714,7 +720,10 @@ const trigger = {
 			case 39 : // →
 				seek_relative(+ CPU_Audio.keymove);
 				break;
+			default:
+				return ;
 		}
+		event.preventDefault();
 	},
 	update : function(event) {
 		let audiotag = event.target;
