No need to use !important in shadowDom \o/

--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -57,16 +57,16 @@ Fonctions retirées :
 <style>
 
 .cpu-audio {
-	font-family : var(--cpu-font-family) !important;
-	font-size : var(--cpu-font-size) !important;
+	font-family : var(--cpu-font-family);
+	font-size : var(--cpu-font-size);
 }
 
 .cpu-audio, * {
-	line-height : 1.2 !important;
-	border : none !important;
-	padding : 0 !important;
-	margin : 0 !important;
-	transition : none !important;
+	line-height : 1.2;
+	border : none;
+	padding : 0;
+	margin : 0;
+	transition : none;
 	moz-user-select: none;
 	ms-user-select: none;
 	webkit-user-select: none;
@@ -86,7 +86,7 @@ Fonctions retirées :
 
 a {
 	color : var(--cpu-link-color);
-	border : none !important;
+	border : none;
 	text-decoration : none;
 }
 svg {
@@ -357,7 +357,7 @@ a:hover svg {
 
 	.cpu-audio {
 		height : 32px;
-		font-size : var(--cpu-small-font-size) !important;
+		font-size : var(--cpu-small-font-size);
 	}
 
   	.nosmall {
